# encoded_reasoning

./: .gitignore  README.md  eval_summary.csv  experiments.py  grader.py  grader_test.py  inspect_data.py  logit_masking.py  plan.md  prompts.json  pyproject.toml  requirements.txt  run.sh  test_emoji_prompt.py
evals/: __main__.py  constraints.py  datasets.py  experiments.sh  plot_results.py  runner.py  runner_2stage.py  token_filters.py
experiments/: gpt52_morehop.py  morehop.sh  opus_gsm8k_repeats.py  opus_morehop_repeats.py  prompt_repeat_models.py  qwen2.5-14b_ablations.py
finetuning/: TODO.md  constraints.py  create_dataset.py  experiment.py  experiments.py  grader.py  grader_test.py  gsm8k.py  open_model_finetuning.py  openai_rl_finetuning.py  register_datasets.py  train_grpo.py
finetuning_kutay/: AGENT.md  Encoded Reasoning Capstone.md  PLAN.md
logit_masking/: __init__.py  model_api.py  processor.py  test_integration.py  test_masking.py
logs/: 2026-02-05T16-27-39+00-00_unconstrained-gen-arithmetic-gpt-5.2_BGzeVjeEHmho7L3gzdornR.eval  2026-02-05T16-28-57+00-00_no-cot-gen-arithmetic-gpt-5.2_dYbyvsudMHWrpcb8Up8CEx.eval  2026-02-05T16-29-28+00-00_max-len-5-gen-arithmetic-gpt-5.2_kU6WRhpFFXLHUUWqvAXaJF.eval  2026-02-05T16-30-01+00-00_max-len-4-gen-arithmetic-gpt-5.2_4H3KhEbGm4rqtWPSaPQBWA.eval  2026-02-05T16-32-47+00-00_max-len-3-gen-arithmetic-gpt-5.2_9yxR8FkohW28bBKr5z6YQV.eval  2026-02-05T16-34-18+00-00_common-100-gen-arithmetic-gpt-5.2_NkfW77kZCBgDziLvTpfahc.eval  2026-02-06T12-50-36+00-00_unconstrained-gen-arithmetic-claude-opus-4.5_azXyGAgEA2TC39QKNTK6pJ.eval  2026-02-06T12-50-58+00-00_no-cot-gen-arithmetic-claude-opus-4.5_5vukfCZLLyThM6uHkeicTM.eval  2026-02-06T12-51-30+00-00_2stage-stripped-max-len-4-gen-arithmetic-claude-opus-4.5_44Dydj5ruwmLHTkLFnKWps.eval  2026-02-06T13-18-25+00-00_2stage-stripped-max-len-5-gen-arithmetic-gpt-5.2_NRiWfAACzodGREAAnWhYZQ.eval  2026-02-06T13-18-43+00-00_2stage-stripped-max-len-4-gen-arithmetic-gpt-5.2_D5GJjH2XGd8huW4sJ8o2GX.eval  2026-02-06T13-20-00+00-00_2stage-stripped-max-len-5-gen-arithmetic-claude-opus-4.5_FS8eYxpv7XAhJwQiasAnSJ.eval  (+7 more)
notebooks/: analysis.py  morehopqa.py  (+2 more)
(+201 files in other folders)
