[project]
name = "encoded-reasoning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets",
    "inspect_ai",
    "ipykernel",
    "ipywidgets",
    "openai",
    "python-dotenv",
    "tabulate",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "trl>=0.27.1",
    "peft>=0.18.1",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "numpy>=1.24.0",
    "tqdm",
    "wandb>=0.16.0",
]
