[project]
name = "encoded-reasoning"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "datasets",
    "inspect_ai",
    "ipykernel",
    "ipywidgets",
    "openai",
    "python-dotenv",
    "tabulate",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "trl>=0.27.1",
    "peft>=0.18.1",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "auto-gptq>=0.7.0",
    "optimum>=1.17.0",
    "numpy>=1.24.0",
    "tqdm",
    "wandb>=0.16.0",
    "regex",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evals", "logit_masking"]
