[project]
name = "encoded-reasoning"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "inspect_ai",
    "ipykernel",
    "ipywidgets",
    "marimo",
    "nest-asyncio",
    "openai",
    "openpyxl",
    "python-dotenv",
    "regex",
    "tabulate",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "trl>=0.27.1",
    "peft>=0.18.1",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0;sys_platform=='linux'",
    "optimum>=1.17.0",
    "autoawq;sys_platform=='linux'",
    "numpy>=1.24.0",
    "tqdm",
    "wandb>=0.16.0",
    "regex",
    "matplotlib>=3.10.8",
]

[project.scripts]
encoded-reasoning = "encoded_reasoning.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/encoded_reasoning"]
